Made contexts content-only, added proper package structure, prepared instance generation