@@ -1,8 +1,9 @@
 package de.enithing.contenthub.generator;
 
 import de.enithing.contenthub.generator.util.XmlUtils;
+import de.enithing.contenthub.model.contentfragment.ContentFragmentModel;
+import de.enithing.contenthub.model.contentfragment.ContentFragmentModelSet;
 import de.enithing.contenthub.model.contenthub.Package;
-import de.enithing.contenthub.model.contenthub.RootContext;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.PrintWriter;
@@ -26,14 +27,14 @@ public class PackageGenerator implements TemplateBasedGenerator<Package> {
 		public Context(FileObject jcrRoot) {
 			this.jcrRoot = jcrRoot;
 		}
-		
+
 		private FileObject jcrRoot;
 
 		public FileObject getJcrRoot() {
 			return jcrRoot;
 		}
 	}
-		
+
 	private GeneratorConfiguration config;
 
 	public PackageGenerator(GeneratorConfiguration cfg) {
@@ -44,7 +45,7 @@ public class PackageGenerator implements TemplateBasedGenerator<Package> {
 	public GeneratorConfiguration getConfig() {
 		return config;
 	}
-	
+
 	@Override
 	public Path getTemplatesPath() {
 		return Path.of("/package");
@@ -53,140 +54,79 @@ public class PackageGenerator implements TemplateBasedGenerator<Package> {
 	@Override
 	public void onEnter(Package pkg) throws Exception {
 		FileObject targetRoot = getConfig().targetRoot;
-		
-		// Create the jcr_root
-		FileObject jcrRoot = targetRoot.resolveFile("jcr_root");
-		jcrRoot.createFolder();
-		
-		// Write the root .content.xml file
-		VelocityContext context = getTemplateContext(pkg);
-		FileObject contentXml = jcrRoot.resolveFile(".content.xml");
 
-		if (!contentXml.exists()) {
-			// Create the .content.xml only if it does not exist
-			contentXml.createFile();
-			OutputStream os = contentXml.getContent().getOutputStream();
-			Writer writer = XmlUtils.getPrettyPrintWriter(os);
-			Template tpl = resolveTemplate(pkg, "jcr_root/.content.xml");
-			tpl.merge(context, writer);
-			os.flush();
-			writer.close();
-		}
-		
-		for (RootContext ctx : pkg.getContexts()) {
-			GeneratorConfiguration childConfig = createChildConfig(pkg);
-			childConfig.targetRoot = jcrRoot;
-			ContextGenerator ctxGen = new ContextGenerator(childConfig);
-			ctxGen.generate(ctx);
-		}
-	}
-
-	@Override
-	public void onExit(Package pkg) throws IOException, ParseException {	
-		FileObject targetRoot = getConfig().targetRoot;
-
-		VelocityContext context = getTemplateContext(pkg);
-		
 		// Create the META-INF directory
 		FileObject metaInfDir = targetRoot.resolveFile("META-INF");
 		metaInfDir.createFolder();
 
-		{
-			// Write the manifest
-			String path = "META-INF/MANIFEST.MF";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = metaInfDir.resolveFile("MANIFEST.MF");
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();
-		}
-		
-		FileObject vaultDir = metaInfDir.resolveFile("vault");
-		vaultDir.createFolder();
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/MANIFEST.MF"));
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/vault/filter.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/vault/config.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/vault/nodetypes.cnd"));
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/vault/properties.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("META-INF/vault/definition/.content.xml"));
 
-		{
-			// Write filters.xml
-			String path = "META-INF/vault/filter.xml";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();
+		// Create the jcr_root directory
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/.content.xml"));
+
+		// Create the conf directory
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/$packageName/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/$packageName/settings/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/$packageName/settings/dam/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/$packageName/settings/dam/cfm/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/conf/$packageName/settings/dam/cfm/models/.content.xml"));
+
+		// Create the content directory
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/content/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/content/dam/.content.xml"));
+		renderTemplate(pkg, targetRoot, Path.of("jcr_root/content/dam/$packageName/.content.xml"));
+
+	}
+
+	@Override
+	public void onExit(Package pkg) throws Exception {
+		FileObject targetRoot = getConfig().targetRoot;
+
+		// Create the fragment models
+		for (ContentFragmentModel mdl : pkg.getAllContentFragmentModels()) {
+			FileObject dir = targetRoot.resolveFile(
+					String.format("jcr_root/conf/%s/settings/dam/cfm/models/%s", pkg.getName(), mdl.getId()));
+			dir.createFolder();
+
+			GeneratorConfiguration childConfig = createChildConfig(pkg);
+			childConfig.targetRoot = dir;
+
+			ContentFragmentModelGenerator mdlGenerator = new ContentFragmentModelGenerator(childConfig);
+			mdlGenerator.generate(mdl);
 		}
-		
-		{
-			// Write config.xml
-			String path = "META-INF/vault/config.xml";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();
+
+		// Create the content
+		de.enithing.contenthub.model.contenthub.Context contentRoot = pkg.getContentRoot();
+		if(contentRoot != null) {
+			GeneratorConfiguration childConfig = createChildConfig(pkg);
+			childConfig.targetRoot = targetRoot.resolveFile("jcr_root");
+			ContextGenerator ctxGen = new ContextGenerator(childConfig);
+			ctxGen.generate(pkg.getContentRoot());
 		}
-		
-		{
-			// Write nodetypes.cnd
-			String path = "META-INF/vault/nodetypes.cnd";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();
+	}
+
+	private void renderTemplate(Package pkg, FileObject root, Path path) throws IOException, ParseException {
+		VelocityContext context = getTemplateContext(pkg);
+
+		for (Path p : path.getParent()) {
+			root = root.resolveFile(VelocityUtils.replace(p.toString(), context));
+			root.createFolder();
 		}
-		
-		{
-			// Write nodetypes.cnd
-			String path = "META-INF/vault/nodetypes.cnd";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(getTemplateContext(pkg), writer);
-			os.close();
-		}
-		
-		{
-			// Write properties.xml
-			String path = "META-INF/vault/properties.xml";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();
-		}
-		
-		FileObject definitionDir = vaultDir.resolveFile("definition");
-		definitionDir.createFolder();
-		
-		{
-			// Write definition file
-			String path = "META-INF/vault/definition/.content.xml";
-			Template tpl = resolveTemplate(pkg, path);
-			FileObject file = targetRoot.resolveFile(path);
-			file.createFile();
-			OutputStream os = file.getContent().getOutputStream();
-			PrintWriter writer = new PrintWriter(os);
-			tpl.merge(context, writer);
-			writer.flush();
-			os.close();	
-		}
-	
+
+		Template tpl = resolveTemplate(pkg, path.toString());
+		FileObject file = root.resolveFile(path.getFileName().toString());
+		file.createFile();
+		OutputStream os = file.getContent().getOutputStream();
+		PrintWriter writer = new PrintWriter(os);
+		tpl.merge(context, writer);
+		writer.flush();
+		os.close();
 	}
 
 	@Override
@@ -194,23 +134,18 @@ public class PackageGenerator implements TemplateBasedGenerator<Package> {
 		// Add the basic fields
 		ctx.put("packageName", pkg.getName());
 		ctx.put("packageGroup", pkg.getGroup());
+		ctx.put("packageTitle", pkg.getTitle());
 		ctx.put("packageAuthor", pkg.getAuthor());
 		ctx.put("packageDescription", pkg.getDescription());
 		ctx.put("packageVersion", pkg.getVersion());
 		ctx.put("packageCreator", "admin");
-		
+
 		// Generate the package filter list
 		List<Path> packageFilterPaths = new ArrayList<>(Arrays.asList(Path.of("/content/dam/" + pkg.getName()),
 				Path.of("/content/cq:graphql/" + pkg.getName()), Path.of("/conf/" + pkg.getName())));
 
-		packageFilterPaths.addAll(pkg.getContexts().stream().map(rootContext -> rootContext.getRelativePath())
-				.collect(Collectors.toList()));
-
-		packageFilterPaths = packageFilterPaths.stream()
-				.distinct()
-				.map(p -> VelocityUtils.replace(p, ctx))
-				.filter(p -> p != null)
-				.sorted().toList();
+		packageFilterPaths = packageFilterPaths.stream().distinct().map(p -> VelocityUtils.replace(p, ctx))
+				.filter(p -> p != null).sorted().toList();
 
 		List<String> packageRoots = packageFilterPaths.stream().map(p -> PathUtils.getRootLeaf(p).toString()).distinct()
 				.collect(Collectors.toList());
@@ -218,7 +153,7 @@ public class PackageGenerator implements TemplateBasedGenerator<Package> {
 
 		ctx.put("packageRoots", packageRoots);
 		ctx.put("packageFilters", packageFilters);
-		
+
 		Date packageDate = Date.from(Instant.now());
 		SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
 		ctx.put("packageDate", format.format(packageDate));
